# CppUtils

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.sh  premake5.lua
logger/: default_logger.cpp  logger.cpp  logger.h  main.cpp  win32_logger.cpp
single_include/cppUtils/: cppMaybe.hpp  cppPrint.hpp  cppStrings.hpp  cppTests.hpp  cppUtils.h  cppUtils.hpp  main.c  main.cpp  main_cpp.cpp
single_include/logger/: logger.h
